# mlops-orchestration-layer

./: .gitignore  Dockerfile  Makefile  Readme.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: f1.yaml  gold.yaml  liar.yaml  policy.yaml
docs/: index.html  style.css
docs/demo/: f1_latest_decision.json  f1_latest_flow.txt  gold_latest_decision.json  gold_latest_flow.txt  latest_decision.json  liar_latest_decision.json  liar_latest_flow.txt
scripts/: export_demo_artifact.py
scripts/scripts/: smoke_predict.py
src/mlops_orchestrator/: cli.py
src/mlops_orchestrator/adapters/: __init__.py  f1_adapter.py  gold_adapter.py  liar_adapter.py
src/mlops_orchestrator/contracts/: __init__.py  base.py  schemas.py
src/mlops_orchestrator/gates/: __init__.py  policy_engine.py
src/mlops_orchestrator/registry/: __init__.py  model_registry.py
tests/: test_adapter_contracts.py  test_cli_agentic.py  test_cli_config.py  test_cli_smoke.py  test_orchestrator_smoke.py  test_policy_engine.py  test_registry.py
