[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-orchestration-layer"
version = "0.1.0"
description = "Reusable MLOps orchestration layer for multi-project ML systems"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Krzysztof Sedkowski" }
]
dependencies = [
  "typer>=0.12,<1.0",
  "PyYAML>=6.0,<7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "black>=24.0,<25.0"
]

[project.scripts]
mlops = "mlops_orchestrator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]